--- a/2.2/src/nfs-pvc.yaml
+++ b/2.2/src/nfs-pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-storage
+  name: pvc-01
 spec:
-  storageClassName: nfs-csi
+  storageClassName: nfs
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 100Mi
